--- a/demos/button/checkbox.html
+++ b/demos/button/checkbox.html
@@ -57,7 +57,7 @@
 	<form>
 		<input type="checkbox" id="checkbox-1" />
 		<label for="checkbox-1">Checkbox widget sample</label>
-		<input type="checkbox" id="checkbox-2" /><label for="checkbox-2">Checkbox widget sample</label>
+		<label>Checkbox widget sample <input type="checkbox" id="checkbox-2" /></label>
 
 		<input type="radio" id="radio-1" name="radio" checked/>
 		<label for="radio-1">Radio widget sample</label>
